# doc-to-excel

./: .env  README.md  __init__.py  pyproject.toml  requirements.txt
api/: 1c299ecb_extracted.xlsx  64d9ed3a_extracted.xlsx  d5296389_extracted.xlsx  main.py  routes.py  workflow.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: DocumentAssistant.js
